--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,42 @@ project(handheld_object_segmentation)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
+  image_transport
   roscpp
   rospy
+  sensor_msgs
+  geometry_msgs
+  std_msgs
+  nav_msgs
+  message_filters
+  tf
+  tf_conversions
 )
+
+find_package(OpenCV REQUIRED)
+find_package(PCL 1.8 REQUIRED)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -Wextra -pedantic -O3 -Wno-long-long -fno-omit-frame-pointer -ftree-vectorize")
+
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
+
+set(ENABLE_CUDA ON)
+find_package(CUDA REQUIRED)
+include(FindCUDA)
+
+set(CUDA_NVCC_FLAGS 
+  --generate-code arch=compute_50,code=sm_50
+  --generate-code arch=compute_52,code=sm_52
+  --generate-code arch=compute_53,code=sm_53
+  )
+
+if (${CUDA_VERSION} MATCHES "7.5")
+  set(CUDA_NVCC_FLAGS --ptxas-options=-v -std=c++11 --use_fast_math -lcufft -Xcompiler "-w" -lcublas)
+elseif(${CUDA_VERSION} MATCHES "8.0")
+  set(CUDA_NVCC_FLAGS --ptxas-options=-v --use_fast_math -lcufft -Xcompiler "-w" -lcublas)
+endif()
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -100,10 +130,10 @@ catkin_python_setup()
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES handheld_object_segmentation
-#  CATKIN_DEPENDS cv_bridge roscpp rospy
-#  DEPENDS system_lib
+  INCLUDE_DIRS include
+  LIBRARIES handheld_object_segmentation
+  CATKIN_DEPENDS cv_bridge roscpp rospy
+  DEPENDS system_lib
 )
 
 ###########
@@ -114,8 +144,12 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
-  ${catkin_INCLUDE_DIRS}
+  include ${catkin_INCLUDE_DIRS}
 )
+
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
 
 ## Declare a C++ library
 # add_library(handheld_object_segmentation
@@ -128,16 +162,18 @@ include_directories(
 # add_dependencies(handheld_object_segmentation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(handheld_object_segmentation_node src/handheld_object_segmentation_node.cpp)
+add_executable(handheld_object_registration src/handheld_object_registration.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(handheld_object_segmentation_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(handheld_object_segmentation_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(handheld_object_registration
+   ${catkin_LIBRARIES}
+   ${PCL_LIBRARIES} 
+   ${OpenCV_LIBS}
+   )
 
 #############
 ## Install ##
